# yggdrasil-worker-package-manager

./: .packit.yaml  Makefile  README.md  com.redhat.Yggdrasil1.Worker1.package_manager.conf  com.redhat.Yggdrasil1.Worker1.package_manager.service.in  com.redhat.yggdrasil.Worker1.package_manager.service.in  config.toml  go.mod  go.sum  main.go  meson.build  meson_options.txt  package_manager.go  package_manager_apt.go  package_manager_dnf.go  package_manager_yum.go  server.go  util.go
.copr/: Makefile
.github/: dependabot.yml
.github/workflows/: dist.yml  go.yml  lint.yml  tag-release.yml  update-version.yml
data/: meson.build
data/dbus/: com.redhat.Yggdrasil1.Worker1.package_manager.conf.in  com.redhat.Yggdrasil1.Worker1.package_manager.service.in  meson.build
data/systemd/: com.redhat.Yggdrasil1.Worker1.package_manager.service.in  meson.build
systemtest/plans/: main.fmf
systemtest/tests/dbus/: main.fmf  test.sh
systemtest/tests/help/: main.fmf  test.sh
